fixed center align on About section

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -157,22 +157,21 @@
     }
 
     .about-section {
-      max-width: 1200px;
+      align-items: center;
       width: 100%;
-      margin: 0 10%;
-      text-align: center;
-      justify-content: center;
   }
   
   .about-content {
-      display: flex;
-      text-align: center;
-      gap: 50px;
-      margin-top: 1.5rem;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
   
   .about-content img {
-    max-width: 80%;
+    max-width: 30%;
     height: auto;
     border-radius: 10%;
   }
@@ -182,7 +181,7 @@
   }
   
   .about-text {
-      flex: 1;
+      width: 65%;
       text-align: left;
   }
   
